Close ops gaps and add watchdog mode
